# MAGIos

./: .gitignore  .swift-version  BUILD_SYSTEM.md  INIT.md  LLM_RULES.md  Makefile  Makefile.swift  Package.swift  QUICK_START.md  README.md  RESTART.md  RISC-V-MIGRATION.md  SWIFT_INTEGRATION.md  SWIFT_SUMMARY.md  build.ps1  build.sh  grub.cfg  linker.ld
swift-src/: CMakeLists.txt  Package.swift
swift-src/.build/: build.db  debug.yaml
swift-src/.build/x86_64-unknown-windows-msvc/debug/: plugin-tools-description.json
swift-src/.build/x86_64-unknown-windows-msvc/debug/MAGIosSwift.build/: output-file-map.json
swift-src/.build/x86_64-unknown-windows-msvc/debug/ModuleCache/: CRT-3NAAFOM68L28T.swiftmodule  WinSDK-36XS648D6946C.swiftmodule  _Concurrency-3GBS0GYZK5FT6.swiftmodule  _StringProcessing-28LY2X0MAV4RQ.swiftmodule
swift-src/.build/x86_64-unknown-windows-msvc/debug/ModuleCache/1MSK6O8YVA2H9/: CDispatch-2SQWQ2QZR7ZW6.pcm  Dispatch-2SQWQ2QZR7ZW6.pcm  SAL-LL7M73VC15BW.pcm  SwiftOverlayShims-345OUCJXE8WK3.pcm  SwiftShims-345OUCJXE8WK3.pcm  _Builtin_stddef-1VVKUMPC9JGMI.pcm  _FoundationICU-2XVZ4MNL8KP3V.pcm  _SwiftConcurrencyShims-345OUCJXE8WK3.pcm  _complex-2DMHDX6KQUVE7.pcm  _stddef-2DMHDX6KQUVE7.pcm  _stdlib-2DMHDX6KQUVE7.pcm  corecrt-2DMHDX6KQUVE7.pcm  ucrt-2DMHDX6KQUVE7.pcm  vcruntime-LL7M73VC15BW.pcm
swift-src/.build/x86_64-unknown-windows-msvc/debug/ModuleCache/21TUNSH0KQ3SM/: SAL-LL7M73VC15BW.pcm  SwiftOverlayShims-345OUCJXE8WK3.pcm  SwiftShims-345OUCJXE8WK3.pcm  _Builtin_stddef-1VVKUMPC9JGMI.pcm  _complex-2DMHDX6KQUVE7.pcm  _stddef-2DMHDX6KQUVE7.pcm  _stdlib-2DMHDX6KQUVE7.pcm  corecrt-2DMHDX6KQUVE7.pcm  ucrt-2DMHDX6KQUVE7.pcm  vcruntime-LL7M73VC15BW.pcm
swift-src/.build/x86_64-unknown-windows-msvc/debug/Modules/: SwiftKernelDemo.swiftdoc  SwiftKernelDemo.swiftmodule  SwiftKernelDemo.swiftsourceinfo
swift-src/.build/x86_64-unknown-windows-msvc/debug/SwiftKernelDemo.build/: SwiftKernelDemo.emit-module.d  main.d  main.swiftdeps  master.priors  output-file-map.json  sources
swift-src/.build/x86_64-unknown-windows-msvc/debug/SwiftKernelDemo.product/: Objects.LinkFileList
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/db/v13/p30324--859eb9/: lock.mdb
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/0H/: corecrt_math.h-1X4058NVWQI0H
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/32/: ncrypt.h-BK7OHJREWI32
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/4Q/: d3d12sdklayers.h-2X7UJUT87RB4Q
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/4R/: main.swift-3DXD9HCOMR64R
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/7Y/: wincrypt.h-1B0HXIXA2ID7Y
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/8X/: processthreadsapi.h-1QKS0MZ2SHR8X
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/AI/: winuser.h-2FW9YF0TDW1AI
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/BO/: intsafe.h-MSFIA11PJTBO
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/C1/: vcruntime.h-35VOH49HANGC1
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/CM/: sddl.h-3VYNIWKEDDICM
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/DB/: winioctl.h-84S3DGDEXSDB  winnt.h-3A6X40HF29DB
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/DE/: winbase.h-3RR9OWZMD60DE
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/DS/: ws2def.h-P9Z46GB780DS
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/EG/: main.swift-1DQNQM2HXLMEG
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/GC/: appmodel.h-8KQYCZAMTBGC
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/IY/: minidumpapiset.h-2B7U75XZ2RTIY
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/JE/: consoleapi.h-3PWE0SBSZ60JE
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/L3/: synchapi.h-3CZXD7BI1G2L3
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/L5/: d3d12.h-ALLF2RWI7IL5
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/LA/: d3d11.h-16P7SFFGYP3LA
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/LJ/: wincred.h-IOU7R59HQKLJ
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/MZ/: winerror.h-SQTX5PXPGRMZ
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/NP/: devpkey.h-1GJN9MNP5EBNP
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/records/NV/: bcrypt.h-2F3T5FLBURHNV
swift-src/.build/x86_64-unknown-windows-msvc/debug/index/store/v5/units/: CDispatch-2SQWQ2QZR7ZW6.pcm-1A1BJAZBFLLPK  Dispatch-2SQWQ2QZR7ZW6.pcm-3PJ7JMFEAI7P2  SAL-LL7M73VC15BW.pcm-3JIKC9QICFE8Z  SwiftOverlayShims-345OUCJXE8WK3.pcm-26HT0MMQJITSR  SwiftShims-345OUCJXE8WK3.pcm-1O1K8JVMNQQKD  WinSDK-3VZI2CSYIN2UR.pcm-24KUTWX61UWJB  _Builtin_stddef-1VVKUMPC9JGMI.pcm-EEDBMWPIIHS1  _SwiftConcurrencyShims-345OUCJXE8WK3.pcm-2CU0CDRYL99XP  _complex-2DMHDX6KQUVE7.pcm-212OF8G1C7VRU  _stddef-2DMHDX6KQUVE7.pcm-O823ZCM2RMTT  _stdlib-2DMHDX6KQUVE7.pcm-V824Z4K4TLVN  corecrt-2DMHDX6KQUVE7.pcm-2T6Q5C9LXRXX6  main.swift.o-1OSDY121AROWV  ucrt-2DMHDX6KQUVE7.pcm-3BEPAJP8NI3XP  vcruntime-LL7M73VC15BW.pcm-H1RMLQTEUDZA  x86_64-unknown-windows-msvc.swiftinterface-1HOCZLU4J7AQT  x86_64-unknown-windows-msvc.swiftinterface-1IPIUPRNHINMS  x86_64-unknown-windows-msvc.swiftinterface-28F8WQU1D4QRQ  x86_64-unknown-windows-msvc.swiftinterface-2WP8JYFJ04ZKK  x86_64-unknown-windows-msvc.swiftinterface-3I6AAP8TFS4UE  x86_64-unknown-windows-msvc.swiftmodule-2TFFDB7AYTJCA  x86_64-unknown-windows-msvc.swiftmodule-2VZGF93BLQRZC  x86_64-unknown-windows-msvc.swiftmodule-3KK5ACX8DLCJC  x86_64-unknown-windows-msvc.swiftmodule-3U9YOZ200K8O7
swift-src/Sources/MAGIosSwift/: SwiftKernel.swift
swift-src/Sources/SwiftKernelDemo/: main.swift
(+64 files in other folders)
